@@ -109,3 +109,16 @@ VALUES (251, 129, 'module', 'is.pl'),
        (252, 129, 'action', 'add'),
        (253, 129, 'type', 'customer_return');
 COMMIT;
+
+BEGIN;
+ALTER TABLE invoice ADD vendor_sku text;
+UPDATE invoice SET vendor_sku = (select min(partnumber) from partsvendor
+                                  where parts_id = invoice.parts_id
+                                        AND credit_id = (
+                                                 select entity_credit_account
+                                                   from ap
+                                                  where ap.id = invoice.trans_id
+                                        )
+                                )
+ WHERE trans_id in (select id from ap);
+COMMIT;
